Closed Bug 1581942 Opened 6 years ago Closed 6 years ago

Snapping Picture-In-Picture videos to the left/right/top with the keyboard displays thick white bars on the video's sides

Categories

(Toolkit :: Video/Audio Controls, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla71
Tracking Status
firefox71 --- verified

People

(Reporter: mconley, Assigned: mconley)

References

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1543027 +++

STR:

  1. Use Windows
  2. Open any video in Picture-In-Picture mode
  3. Press Win key+left/right/up arrow keys

AR:
a. Snapping the video to the top once adds 2 big white bars to the video (one above the video and another on its bottom) covering half of the screen
b. Snapping the video to the right/left adds 2 white bars to the video (one on its right and another on its left). Also the video gets ~2x bigger
c. Snapping the video to the top twice makes the video look the same as in #b, but on the upper part of the screen
d. Snapping the video to the top thrice makes it go fullscreen, and adds a white bar to the video's bottom part

ER:
No white bars, and potentially no 2x bigger videos (?)

No longer blocks: 1536747
Pushed by mconley@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ad4c2710305d Enforce aspect ratio constraint even if Windows Aero Snap is used to resize the window. r=aklotz
Blocks: 1545748
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Assignee: nobody → mconley

Build ID 20191022214314
User Agent Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:72.0) Gecko/20100101 Firefox/72.0

Verified as fixed on the latest Nightly build on Windows 10.

Status: RESOLVED → VERIFIED
Flags: a11y-review?
Flags: a11y-review?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: