Bug 1581942 - Enforce aspect ratio constraint even if Windows Aero Snap is used to resize the window. r=aklotz

Differential Revision: https://phabricator.services.mozilla.com/D46847